--- a/flexbox.html
+++ b/flexbox.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flexbox Practice</title>
+    <title>Flexbox Testtle>
   </head>
   <body style="padding-bottom: 1000px;">
     <div style="
