--- a/intro-to-html/text.html
+++ b/intro-to-html/text.html
@@ -4,7 +4,7 @@
     <title>Text Practice</title>
 
     <link rel="preconnect"https://ramis2.github.io/index.html">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect"https://ramis2.github.io/index.html/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/text.css">
