--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
 
-    <h1>Welcome to My Sample Page</h1>
+    <h1>Welcome to Furda news, coming soon!</h1>
 
     <h2>Images</h2>
     <img src="https://via.placeholder.com/600x400" alt="Sample Image 1">
