--- a/index.html
+++ b/index.html
@@ -53,30 +53,30 @@
         Your browser does not support the video tag.
     </video>
 
-    <h2>Table Example</h2>
+    <h2>Our News Journalist Name</h2>
     <table>
         <thead>
             <tr>
                 <th>Name</th>
-                <th>Age</th>
+                <th>Years in services</th>
                 <th>City</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>John Doe</td>
+                <td>Jim Jimma</td>
                 <td>30</td>
-                <td>New York</td>
+                <td>Qarsara</td>
             </tr>
             <tr>
-                <td>Jane Smith</td>
+                <td>Sagal Smith</td>
                 <td>25</td>
-                <td>Los Angeles</td>
+                <td>Dire-Dawaa</td>
             </tr>
             <tr>
-                <td>Sam Johnson</td>
+                <td>Abdi Sanikim</td>
                 <td>22</td>
-                <td>Chicago</td>
+                <td>Calanqorraa</td>
             </tr>
         </tbody>
     </table>
