--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <<!DOCTYPE html>
 <html lang="en">
 <head>
+    <header>
+    <div class="header-container">
+        <h1>My Website</h1>
+        <nav>
+            <ul class="nav-menu">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Furda news page</title>
