--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h1>Welcome to Furda news, coming soon!</h1>
 
     <h2>Images</h2>
-    <img src="https://via.placeholder.com/600x400" alt="Sample Image 1">
+    <img src="ethhailinowu.png">
     <img src="https://via.placeholder.com/600x400" alt="Sample Image 2">
 
     <h2>Video</h2>
