--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <div class="header-container">
         <nav>
             <ul class="nav-menu">
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>   
