--- a/aboutus.html
+++ b/aboutus.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navigation Example</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
     <div class="header-container">
-        <h1>My Website</h1>
+        <h1>Furda news</h1>
         <nav>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
